Revision history for Bit-Manip

0.02 UNREL
        - added in EXPORT_OK POD section
        - code tidying in the XS file

0.01    2017-01-24
        First version, released on an unsuspecting world.
