@@ -13,6 +13,7 @@ t/20-bit_toggle.t
 t/25-bit_on.t
 t/30-bit_off.t
 t/35-bit-bin.t
+t/40-bit_mask.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
