@@ -3,6 +3,9 @@ Revision history for Bit-Manip
 0.02 UNREL
         - added in EXPORT_OK POD section
         - code tidying in the XS file
+        - changed all instances of "first" to msb and "last" to lsb for
+          params
+        - added bit_mask() returns the bit mask given a number of bits and LSB
 
 0.01    2017-01-24
         First version, released on an unsuspecting world.
